capinfo-quarkus-k8s.yaml
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
apiVersion: v1
kind: Service
metadata:
  name: capinfo-quarkus
  labels:
      app: capinfo-quarkus
spec:
  selector:
    app: capinfo-quarkus
  ports:
  - port: 5500
    name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capinfo-quarkus-v1
  labels:
    app: capinfo-quarkus
spec:
  selector:
    matchLabels:
      app: capinfo-quarkus
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: capinfo-quarkus
        version: v1
    spec:
      containers:
      - name: capinfo-quarkus
        image: pklinker/capinfo-quarkus:1
        ports:
        - containerPort: 5500
