capitol-info-gtwy-vs.yaml
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: capitol-info-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: capitol-info-vs
spec:
  hosts:
  - "*"
  gateways:
  - capitol-info-gateway
  http:
  - match:
    - uri:
        prefix: "/getCapitol/"    
    route:
    - destination:
        port:
          number: 5500
        host: capitol-info
